Update clear grid animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="sketcher-wrapper">
-        <div class="sketcher">
+        <div class="sketcher selectDisable">
             <div class="panel controls">
                 <div class="control-box">1a</div>
                 <div class="control-box">1b</div>
