Add grid size slider

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <div class="sketcher-wrapper">
         <div class="sketcher selectDisable">
             <div class="panel controls">
-                <div class="control-box">1a</div>
-                <div class="control-box">1b</div>
-                <div class="control-box">1c</div>
-                <div class="control-box"><button id="clear">Clear Grid</button></div>
+                <div class="control-box" id="cb1">c+rb</div>
+                <div class="control-box" id="cb2">fll+ers</div>
+                <div class="control-box" id="cb3">l+drk</div>
+                <div class="control-box" id="cb4">
+                    <div class="slider-container">
+                        <input type="range" min="4" max="100" value="15" class="slider" id="grid-size-slider">
+                    </div>
+                    <button id="clear">Clear Grid</button>
+                </div>
             </div>
             <div class="panel screen selectDisable">
                 <div class="screen-box display">
