Update grid size slider. Add grid line toggler.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                     <div class="slider-container">
                         <input type="range" min="4" max="100" value="15" class="slider" id="grid-size-slider">
                     </div>
+                    <label class="grid-switch">
+                        <input type="checkbox" id="grid-switch-checkbox" checked>
+                        <span class="toggler"></span>
+                    </label>
                     <button id="clear">Clear Grid</button>
                 </div>
             </div>
