--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <input type="checkbox" id="grid-switch-checkbox" checked>
                         <span class="toggler"></span>
                     </label>
-                    <button id="clear">Clear Grid</button>
+                    <button id="clear">CLEAR GRID</button>
                 </div>
             </div>
             <div class="panel screen selectDisable">
