Clean up JS and CSS code.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="control-box" id="cb1">
                     <div class="control-box-name">COLOR SELECTION</div>
                     <div class="colorpicker-wrapper">
-                        <input type="color" id="colorpicker" value="#000000">
+                        <input type="color" id="colorpicker" value="#3090fd">
                         <div class="colorpicker-disabler"></div>
                     </div>
                     <div class="menu-item-wrapper">
