Fix UI responsiveness for mobile screens

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="screen-box knobs">
                     <div class="knob vertical"></div>
                     <div class="sketcher-logo">
-                        <img src="./images/sketcher-vertical.png">
+                        <img />
                     </div>
                     <div class="knob horizontal"></div>
                 </div>
