Fix styling bugs. Add copyright element.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,21 @@
                 <div class="control-box" id="cb4">
                     <div class="control-box-name">MORE</div>
                     <button id="download">DOWNLOAD SKETCH</button>
+                    <div class="copyright">
+                        <p>
+                            Copyright ©
+                            <script>
+                                document.write(new Date().getFullYear());
+                            </script>
+                            ajvw2.
+                        </p>
+                        <p>
+                            All rights reserved.
+                            <a href="https://github.com/ajvw2" target="_blank">
+                                <img src="./images/github-mark.png" alt="" id="github">
+                            </a>
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="panel screen selectDisable">
