Implement working collapsible menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="sketcher-wrapper">
         <div class="sketcher selectDisable">
+            
             <div class="panel controls">
                 <div class="control-box" id="cb1">
                     <div class="control-box-name">COLOR SELECTION</div>
@@ -109,6 +110,9 @@
                         </p>
                     </div>
                 </div>
+            </div>
+            <div class="collapsible">
+                <img id="menu-collapse-arrow" src="./images/menu-right-open.png">
             </div>
             <div class="panel screen selectDisable">
                 <div class="screen-box display">
