--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <div class="collapsible">
+            <div class="collapser">
                 <img id="menu-collapse-arrow" src="./images/menu-right-open.png">
             </div>
             <div class="panel screen selectDisable">
